Chapter05/gokubia-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: gokubia-headless
spec:
  clusterIP: None
  selector:
    app: gokubia
  ports:
  - port: 80
    targetPort: 8080
