Chapter05/gokubia-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: gokubia-locadbalancer
spec:
  type: LoadBalancer
  selector:
    app: gokubia
  ports:
  - port: 80
    targetPort: 8080
