Chapter05/gokubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: gokubia-nodeport
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: gokubia
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30123
