Chapter05/gokubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gokubia
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port:  443
    targetPort: https
  selector:
    app: gokubia
