Chapter05/gokubia-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gokubia
spec:
  tls:
    - hosts:
      - gokubia.exapmle.com
      secretName: tls-secret
  rules:
  - host: gokubia.exapmle.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gokubia-nodeport
          servicePort: 80
